--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -4,5 +4,5 @@
     "license": "UNKNOWN",
     "theme": "rudy.css",
     "author": "gaybe#1897",
-    "description": "Based off a theme on monkeytype.com(rudy)",
+    "description": "Based off a theme on monkeytype.com(rudy)"
 }
